# soda-client

./: soda-client.cabal  soda.cabal
app/: Main.hs
src/: Client.hs  SODA.hs  Types.hs
