name:                soda-client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adamConnerSax/soda-client#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           2016 Adam Conner-Sax
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , text
                     , http-api-data
                     , http-client
                     , HTTP
                     , mtl
--                    ,  proxy
                     , servant
                     , servant-client
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable test
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , soda-client
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/adamConnerSax/soda-client
